[package]
name = "main"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
graph = {path="../graph"}
itertools = "0.11.0"
clap = { version = "4.4.6", features = ["derive"] }
rand = "0.8.5"
ndarray = "0.15.6"
cmp = "0.0.0"
num-traits = "0.2.17"
boolvec = "0.2.6"
num = "0.4.1"
thread = "0.1.0"
terminal-spinners = "0.3.2"
spinners = "4.1.0"
